fix horizontal and vertical scrollbars

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,14 @@
 
 /* CSS reset */
 * {
-    padding: 3px;
-    margin: 3px;
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 html,
 body {
+    width: 100%;
     height: 100vh;
-    width: 100vw;
     position: relative;
 
 }
@@ -27,6 +27,7 @@ body {
 }
 #content {
     text-align: center;
+    height: 100%;
 }
 #my-name{
     font-family: "Dancing Script" , cursive;
@@ -35,14 +36,18 @@ body {
 }
 #left-side {
 background-color: NONE;
-width: 49%;
-display: inline-block;
+position: absolute;
+top: 16px;
+left: 16px;
+}
+#left-side > a {
+    margin-right: 16px;
 }
 #right-side {
     background-color: NONE;
-    width: 49%;
-    display: inline-block;
-    text-align: right;
+    position: absolute;
+    top: 16px;
+    right: 16px;
 }
 a {
     color: NONE;
@@ -51,18 +56,11 @@ a {
 }
  
 
-header {
-    margin-top: 16px;
-}
-.nav-link {
-    margin-left: 8px;
-}
 footer {
     position: absolute;
-    bottom: 0;
+    bottom: 16px;
     left: 50%;
     transform: translateX(-50%);
-    margin-bottom: 16px;
 }
 footer a:first-child {
     margin-right: 16px;
